<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:title="@string/english">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/level_1"
                    android:title="@string/level_1" />

                <item
                    android:id="@+id/level_2"
                    android:title="@string/level_2" />

                <item
                    android:id="@+id/level_3"
                    android:title="@string/level_3" />

                <item
                    android:id="@+id/level_4"
                    android:title="@string/level_4" />

                <item
                    android:id="@+id/level_5"
                    android:title="@string/level_5" />

                <item
                    android:id="@+id/level_6"
                    android:title="@string/level_6" />

                <item
                    android:id="@+id/level_7"
                    android:title="@string/level_7" />

                <item
                    android:id="@+id/level_8"
                    android:title="@string/level_8" />

                <item
                    android:id="@+id/level_9"
                    android:title="@string/level_9" />

                <item
                    android:id="@+id/level_10"
                    android:title="@string/level_10" />

                <item
                    android:id="@+id/level_11"
                    android:title="@string/level_11" />

                <item
                    android:id="@+id/level_12"
                    android:title="@string/level_12" />
            </group>
        </menu>
    </item>
</menu>